fix: overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ body {
     font-style: italic;
 }
 .team-text > h2 {
-    font-size: 60px;
+    font-size: 56px;
     color: #6BFFF7;
 }
 #team-img {
@@ -229,6 +229,12 @@ th, td {
     #figure-img {
         display: none;
     }
+    #payment-img {
+        margin-left: 200px;
+        position: absolute;
+        max-width: 40%;
+        height: auto;
+    }
     #contact-img {
         display: none;
     }
@@ -237,6 +243,9 @@ th, td {
     }
 }
 @media (max-width: 600px) {
+    .team-text > h2 {
+        font-size: 36px;
+    }
     .main-header {
         font-size: 50px;
         line-height: 1.2;
